frontend/src/App.css
  body {
  margin: 0;
  background: linear-gradient(to bottom, white, #BBB5D8);
}

.myButton{
  background-color: rgb(56, 38, 124);
  color: white;
  border: none;
  padding: 12px 20px;
  border-radius: 8px;
  font-size: 16px;
  cursor: pointer;
  transition: 0.2s;
  margin-top: 20px;
}

#center {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
}

.laatikko {
  background: rgba(255, 255, 255, 0.45);
  padding: 32px 48px;
  border-radius: 24px;
  gap: 15px;
  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
  backdrop-filter: blur(8px);
  text-align: center;
  display: flex;
  flex-direction: column;
}

